--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "description": "parsing logs",
   "main": "parse.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run build:live",
+    "build": "tsc -p .",
+    "build:live": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts"
   },
   "author": "",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
-    "commander": "^7.0.0"
+    "commander": "^7.0.0",
+    "typescript": "^4.2.2"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.31",
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1"
   }
 }
