--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/ua-parser-js": "^0.7.35",
     "commander": "^7.0.0",
-    "typescript": "^4.2.2"
+    "typescript": "^4.2.2",
+    "ua-parser-js": "^0.7.24"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
